--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==2.3.2
-python-telegram-bot==13.15
-requests==2.28.1
-schedule==1.1.0
+python-telegram-bot==20.3
+requests==2.31.0
+apscheduler==3.10.1
 gunicorn==20.1.0
+python-dotenv==1.0.0
+pytz==2023.3
