--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==2.3.2
-apscheduler==3.10.1
-gunicorn==20.1.0
+Flask[async]==2.3.2
 python-telegram-bot==20.3
 requests==2.31.0
 APScheduler==3.10.1
 pytz==2023.3
 python-dotenv==1.0.0
+gunicorn==20.1.0
